--- a/index.html
+++ b/index.html
@@ -93,26 +93,30 @@
         <section id="contato">
             <div class="container p-5 d-flex justify-content-center">
                 <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
-                    <h2 class="mb-3">Se movimente, obesidade é doença!</h2>
+                    <h2 class="mb-3">Se movimente, obesidade é doença!
+
+
+
+                     Caucule seu IMC
+                    </h2>
                     <form>
                         <div class="form-group mb-3">
-                            <label for="nome">Nome</label>
-                            <input type="text" id="nome" name="nome" class="form-control rounded-3 mt-1"
-                                placeholder="Digite seu nome completo">
+                            <label for="Peso">Peso</label>
+                            <input type="text" id="peso" name="peso" class="form-control rounded-3 mt-1"
+                                placeholder="Digite seu peso">
                         </div>
                         <div class="form-group mb-3">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email" class="form-control rounded-3 mt-1"
-                                placeholder="Digite seu email">
+                            <label for=Altura">Altura</label>
+                            <input type="Altura" id="Altura" name="Altura" class="form-control rounded-3 mt-1"
+                                placeholder="Digite sua altura>
                         </div>
                         <div class="form-group mb-3">
-                            <label for="mensagem">Mensagem</label>
-                            <textarea id="mensagem" name="mensagem" class="form-control rounded-4 mt-2" rows="4"
-                                placeholder="Escreva sua mensagem"></textarea>
+                            <label for="Idade>Idade</label>
+                            <textarea id="Idade" name="Idade" class="form-control rounded-4 mt-2" rows="4"
+                                placeholder="Digite sua idade"></textarea>
                         </div>
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary btn-lg rounded-pill">Enviar
-                                mensagem</button>
+                            <button type="submit" class="btn btn-primary btn-lg rounded-pill">Veja se você tem um peso adequado a si</button>
                         </div>
                     </form>
                 </div>
