--- a/index.html
+++ b/index.html
@@ -93,10 +93,7 @@
         <section id="contato">
             <div class="container p-5 d-flex justify-content-center">
                 <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
-                    <h2 class="mb-3">Se movimente, obesidade é doença!
-
-
-                        Calcule seu IMC
+                    <h2 class="mb-3">Se movimente, obesidade é doença
                     </h2>
                     <form>
                         <div class="form-group mb-3">
@@ -107,7 +104,7 @@
                         <div class="form-group mb-3">
                             <label for="Altura">Altura</label>
                             <input type="Altura" id="Altura" name="Altura" class="form-control rounded-3 mt-1"
-                                placeholder="Digite sua Altura>
+                                placeholder="Digite sua Altura">
                         </div>
                         <div class="form-group mb-3">
                             <label for="idade">idade</label>
@@ -115,8 +112,7 @@
                                 placeholder="Escreva sua idade"></textarea>
                         </div>
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary btn-lg rounded-pill">Enviar
-                                mensagem</button>
+                            <button type="submit" class="btn btn-primary btn-lg rounded-pill">Calcule seu IMC</button>
                         </div>
                     </form>
                 </div>
