--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/logoob.png" class="nav-img " loading="lazy">
+            <img src="img/logoob.png" class="nav-img " style="width: 50px; height: 50px;" loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
-                <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+                <li class="nav-item"><a class="nav-link" href="#galeria">Como vive </a></li>
+                <li class="nav-item"><a class="nav-link" href="#contato">Calculadora de IMC</a></li>
             </ul>
             <div id="acessibilidade" class="menu-acessibilidade"> 
                 <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao" aria-expanded="false">acessibilidade</button>
