--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <nav class="container d-flex justify-content-between align-items-center" >
             <img src="img/logoob.png" class="nav-img " style="width: 50px; height: 50px;" loading="lazy">
             <ul class="nav mt-5">
-                <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
-                <li class="nav-item"><a class="nav-link" href="#galeria">Como vive </a></li>
+                <li class="nav-item"><a class="nav-link" href="#inicio">H.A</a></li>
+                <li class="nav-item"><a class="nav-link" href="#galeria">Como são</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Calculadora de IMC</a></li>
             </ul>
             <div id="acessibilidade" class="menu-acessibilidade"> 
