--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="img/logoob.png" class="nav-img " style="width: 250px; height: 200px;" loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">H.A</a></li>
-                <li class="nav-item"><a class="nav-link" href="#galeria">Como são</a></li>
+                <li class="nav-item"><a class="nav-link" href="#como são">Como são</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Calculadora de IMC</a></li>
             </ul>
             <div id="acessibilidade" class="menu-acessibilidade"> 
