--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/hip.png" style="height: 300;" alt="Logo da ABESO" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="img/hip.png" style="height: 300;" alt="Orgãos que apresentam mais problemas associados a H.A." title="Imagem ilustrativa" class="img-fluid img-inicio">
 
               </div>
         </section>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="col-5">
                     <h2>O que pode causar H.A (Hipertensão Arterial)</h2>
-                    <p class="p-2">Muitas razões podem explicar a crescente prevalência de HA em jovens. A obesidade é a principal, seguida pelo consumo de sal e açúcar, ambientes estressantes, baixo nível de atividade física e estilo de vida sedentário. No Brasil, um estudo transversal sobre consumo de alimentos5 em amostra representativa da população com 10 anos ou mais de idade observou que o maior consumo de alimentos ultraprocessados estava associado a maior teor de gorduras em geral, gordura saturada, gordura trans e açúcares livres"
+                    <p class="p-2">Muitas razões podem explicar a crescente prevalência de HA em jovens. A obesidade é a principal, seguida pelo consumo de sal e açúcar, ambientes estressantes, baixo nível de atividade física e estilo de vida sedentário. No Brasil, um estudo transversal sobre consumo de alimentos em amostra representativa da população com 10 anos ou mais de idade observou que o maior consumo de alimentos ultraprocessados estava associado a maior teor de gorduras em geral, gordura saturada, gordura trans e açúcares livres.
                     </p>
                 </div>
             </div>
