--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
             </div>
         </section>
 
-        <section id="Como uma pessoa obesa e com H.A vive" tabindex="0" aria-label="Seção de galeria de imagens">
-            <h2 class="text-center pt-5">Galeria</h2>
+        <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens">
+            <h2 class="text-center pt-5">Exemplo de como são
+            </h2>
             <div class="container p-3 mt-3 fundo-galeria ">
 
                 <div class="row justify-content-md-center">
