--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/logoob.png" class="nav-img " style="width: 250px; height: 200px;" loading="lazy">
+            <img src="img/logoob.png" class="nav-img" style="width: 250px; height: 200px;" loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">H.A</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Como são</a></li>
@@ -46,8 +46,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/hip.png" style="height: 300;" alt="Orgãos que apresentam mais problemas associados a H.A." title="Imagem ilustrativa" class="img-fluid img-inicio">
-
+                <img src="img/hip.png" style="width: 300px; height: 400px;" alt="Orgãos que apresentam mais problemas associados a H.A." title="Imagem ilustrativa que fala os principais orgãos afetados pelo H.A." class="img-fluid img-inicio">
               </div>
         </section>
 
