--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section id="Hipertensão" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/mapmen.webp" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="img/mapmen.webp" class="rounded-pill" width="273" height="331" title="Mapa mental que apresenta de forma resumida H.A e coisas relacionadas" loading="lazy"> 
                 </div>
                 <div class="col-5">
                     <h2>O que pode causar H.A (Hipertensão Arterial)</h2>
