--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">                                                                  
                         <img src="img/obe.png"
-                            class="img-fluid rounded-5" loading="lazy">
+                            class="img-fluid rounded-5" title="Imagem de uma mulher com obesidade e H.A" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/obesi.png" class="img-fluid rounded-5"
+                        <img src="img/obesi.png" class="img-fluid rounded-5" title="Imagem de um homem com dor no coração devido a obesidade"
                             loading="lazy">
                     </div>
                 </div>  
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/obesida.png" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/obesida.png" class="img-fluid rounded-5" title="imagem de um homem medindo a circunfêrencia de sua barriga" loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src="img/obesidade.png"
-                            class="img-fluid rounded-5" loading="lazy">
+                            class="img-fluid rounded-5" title="homem com dor nas costas devido a seus problemas com obesidade" loading="lazy">
                     </div>
                 </div>
              </div>
