--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a Abeso</h1>
                     <img src="img/logog.png" class="mb-3" width="563"
-                        height="278" loading="lazy">
+                        height="278" title="Logo da Abeso = " loading="lazy">
                     <a href="não a obesidade"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
