--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="img/logoob.png" class="nav-img" style="width: 250px; height: 200px;" loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">H.A</a></li>
-                <li class="nav-item"><a class="nav-link" href="#galeria">Como são</a></li>
+                <li class="nav-item"><a class="nav-link" href="#galeria">Como vivem pessoas com H.A <H class="A"></H></a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Calculadora de IMC</a></li>
             </ul>
             <div id="acessibilidade" class="menu-acessibilidade"> 
@@ -41,7 +41,7 @@
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a Abeso</h1>
                     <img src="img/logog.png" class="mb-3" width="563"
-                        height="278" title="Logo da Abeso = " loading="lazy">
+                        height="278" title="Logo da Abeso = Associação Brasileira para o Estudo da Obesidade e Sindrome metábolica" loading="lazy">
                     <a href="não a obesidade"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
