--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/logoob.png" class="nav-img" style="width: 250px; height: 200px;" loading="lazy">
+            <img src="img/logoob.png" class="nav-img" style="width: 250px; height: 200px;" title="Logo da instituição Obesidade Brasil" loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">H.A</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Como vivem pessoas com H.A <H class="A"></H></a></li>
